--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -52,6 +52,10 @@ en:
       class: 'gofox'
   about_project:
     -
+      link: 'Background'
+      title: 'Background'
+      content: '<p>The purpose of this project is to explore the views of conservationists on a range of issues, as a way of informing debates on the future of conservation. Recent debates about the future of conservation have been dominated by a few high-profile individuals, whose views seem to fit fairly neatly into polarised positions. In this survey, we are exploring the range of views that exist within the conservation movement globally, and how this varies by key demographic characteristics such as age, gender, geography and educational background.</p>'
+    -
       link: 'How does it work'
       title: 'How does it work?'
       content: '<p>After taking the survey, the website will present your views on a plot with three axes, relating to the role that people should play in conservation, the roles of scientific evidence and protected areas, and the relationship between conservation and capitalism, respectively. These axes were derived from the first published statistical analysis of the Future of Conservation database (9,264 respondents at the time; see *link to paper* for further details), and correspond to each of the three main dimensions of variation in conservation thinking therein.</p>
