--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -50,7 +50,10 @@ en:
       url: '/'
       icon: 'logos/logo-gofox.svg'
       class: 'gofox'
-  survey_warning: 
+  survey_warning:
+      title: 'Welcome to the Future of Conservation survey'
+      description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent urna ex, feugiat in lobortis non, pharetra et elit. Sed vel felis tortor. Suspendisse quis volutpat neque. Donec finibus ligula ac leo tincidunt, eget porta lorem lobortis. Aliquam rutrum lorem leo, quis eleifend ex commodo congue. Phasellus volutpat tellus elit, nec eleifend tortor pulvinar ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Etiam consectetur malesuada mollis. Cras sodales iaculis sapien quis mollis. Aenean eu hendrerit risus. Etiam ultricies tortor nec tortor egestas luctus. In vulputate quam hendrerit auctor imperdiet. Donec tempus sodales orci vitae bibendum. In volutpat mauris nec lectus tristique semper. Duis eu semper ante.'
+  sign_up_warning:
       title: 'Welcome to the Future of Conservation survey'
       description: 'Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent urna ex, feugiat in lobortis non, pharetra et elit. Sed vel felis tortor. Suspendisse quis volutpat neque. Donec finibus ligula ac leo tincidunt, eget porta lorem lobortis. Aliquam rutrum lorem leo, quis eleifend ex commodo congue. Phasellus volutpat tellus elit, nec eleifend tortor pulvinar ut. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. Etiam consectetur malesuada mollis. Cras sodales iaculis sapien quis mollis. Aenean eu hendrerit risus. Etiam ultricies tortor nec tortor egestas luctus. In vulputate quam hendrerit auctor imperdiet. Donec tempus sodales orci vitae bibendum. In volutpat mauris nec lectus tristique semper. Duis eu semper ante.'
   about_project:
@@ -65,7 +68,7 @@ en:
       <p>Your position on each dimension is situated relative to a ‘neutral point’ (the score which would be obtained if one answered ‘neither agree nor disagree’ to every statement), as well as relative to the average position from our global dataset.</p>
       <p>We have published, and aim to continue to publish, our findings on the views of conservationists in various ways. Where possible, we will include these on this website (see links below). We intend to make our findings widely available to help inform debates about the future of conservation.</p>
       <p>*link to Nature Sustainability paper*</p>'
-    -    
+    -
       link: 'About us'
       title: 'About us'
       content: '<p>Together we have jointly created the website and associated research projects. We are:
@@ -173,7 +176,7 @@ en:
       <p>However, Wilson’s pro-markets view seems to be more to do with ensuring that humanity can flourish on only 50% of the Earth’s surface rather than as a tool for carrying out conservation: that is, the pro-market strategy would be used to buffer the ‘human’ half of the Earth against the need to exploit the ‘natural’ half, rather than as a means to create economic value from protecting the ‘natural’ half.</p>
       <p>Other instances of market ecocentrism include strategies in which market tools, such as ecotourism and ‘willingness to pay’ approaches are used to generate revenue to fund the creation and maintenance of protected areas.</p>
       <p>Key references: ADD REFERENCES</p>'
-  results: 
+  results:
     title1: "How to interpret you results"
     content1: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
     title2: "Your thinking most closely aligns with: Critical Social Science"
