--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,15 +34,15 @@ en:
     -
       title: 'Create a survey'
       icon: 'icons/icon-survey.svg'
-      description: 'Create a survey Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque'
+      description: 'We will be launching the GO-FOX tool soon. Full details will be available on the <a href="/about-go-fox">About GO-FOX</a> page after the launch. If you wish to register your interest in advance, please write to <a href="mailto:futureofconservation@gmail.com">futureofconservation@gmail.com</a>'
     -
       title: 'View results'
       icon: 'icons/icon-results.svg'
-      description: 'view the results of Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque'
+      description: 'We will be launching the GO-FOX tool soon. Full details will be available on the <a href="/about-go-fox">About GO-FOX</a> page after the launch. If you wish to register your interest in advance, please write to <a href="mailto:futureofconservation@gmail.com">futureofconservation@gmail.com</a>'
     -
       title: 'Analyse data'
       icon: 'icons/icon-analyse.svg'
-      description: 'Analyse the data visualisations of individual candidates Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque'
+      description: 'We will be launching the GO-FOX tool soon. Full details will be available on the <a href="/about-go-fox">About GO-FOX</a> page after the launch. If you wish to register your interest in advance, please write to <a href="mailto:futureofconservation@gmail.com">futureofconservation@gmail.com</a>'
   homepage:
     intro:
       title: 'The Future of Conservation Survey'
