--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,74 +67,42 @@ en:
   sign_up_warning:
       title: 'Welcome to the Future of Conservation survey'
       description: 'This project has been approved by the Research Ethics committee at the University of Leeds.<br><br>As you set up your account and survey(s), we will ask some questions about you, your group or organisation, and why you want to use the GO-FOX tool. This will allow us to understand how the tool is being used and the impact it is having. It will also allow us to better understand the views of conservationists, and how these vary according to the characteristics of their group or organisation.<br><br>All data gathered for this project will be stored securely by UN Environment World Conservation Monitoring Centre. An anonymised version of the dataset, excluding all information which could potentially lead to the identification of individual groups or organisations, may be shared with other researchers.<br><br>Your responses will not be identifiable either in this website or in subsequent publications. If you provide your email address, the project team will not share it with other parties, and will only use it to contact you to discuss your use of GO-FOX (for example, to offer help with preparing materials for a session with your group of survey respondents). In any resulting publications, we will remove identifying features and take other measures such as aggregating responses to protect the anonymity of organisations and groups who participate in this survey.<br><br>The GO-FOX tool was developed to help measure and understand the views held by conservationists. We encourage you to use it responsibly, such as in education, training or strategy development. The GO-FOX project team do not accept responsibility for how you or your organisation uses or distributes responses. We expect users to carefully consider the implications of how the tool is used within their group or organisation, particularly the implications for participants of revealing divergent or minority opinions.'
-  about_project:
+  resources:
     -
       link: 'Background'
       title: 'Background'
-      content: '<p>The purpose of this project is to explore the views of conservationists on a range of issues, as a way of informing debates on the future of conservation. Recent debates about the future of conservation have been dominated by a few high-profile individuals, whose views seem to fit fairly neatly into polarised positions. In this survey, we are exploring the range of views that exist within the conservation movement globally, and how this varies by key demographic characteristics such as age, gender, geography and educational background.</p>
-      <p>Funding for the Future of Conservation Project has been received from the Cambridge Conservation Initiative Collaborative Fund, which is supported by the Arcadia Fund, and from the Economic and Social Research Council (ESRC) Impact Acceleration Account at the University of Edinburgh. We are very grateful for the support of these donors.</p>'
+      content: '
+      <p>On this page you can find resources that support the implementation of your GO-FOX projects. 
+      We hope that you will find these useful, and we welcome your feedback on them (to 
+      <a href="mailto:futureofconservation@gmail.com" title="Email The Future of Conservation">futureofconservation@gmail.com</a>).
+      If you are looking for information on how to use the website and interpret the results provided, please go to the 
+      <a href="support?locale=en" title="support">support</a> page.<br/><br/>
+      [Long GO-FOX background video to go here]
+      <br/><br/>
+      In this video, the core Future of Conservation Survey team introduce the research that lies behind GO-FOX, 
+      and how GO-FOX came about. You might want to watch this video to make sure that you fully understand the 
+      research so that you are well placed to describe it to a group with whom you are working. You might alternatively 
+      consider sharing the video with the group directly, so that your students or participants can get better understand 
+      the project before you share their own results with them.
+      <br/><br/>
+      [Clickable download for powerpoint file]
+      <br/><br/>
+      This slide-deck covers similar material to the video above. You are welcome to use it as it is, or to edit it 
+      for your purposes. Please ensure that you acknowledge the source when doing so.
+      </p>'
     -
-      link: 'How does it work'
-      title: 'How does it work?'
-      content: "<p>After taking the survey, the website will present your views on a plot with three axes. These are ‘people-centred conservation’ (relating to the role that people should play in conservation), ‘science-led ecocentrism’ (relating to the role of science in the conservation of species and ecosystems), and ‘conservation through capitalism’ (relating to the role of corporations and market based approaches in conservation). These axes were derived from statistical analysis of results from the first 9,264 respondents to the Future of Conservation survey (see <a href='https://www.nature.com/articles/s41893-019-0267-5' title='Visit the paper in Nature Sustainability' target='_blank'>this paper</a> in Nature Sustainability for further details of the analysis and results - the <a href='https://wordpress.com/post/thinkinglikeahuman.com/458' title=\"Visit the Authors' Accepted Manuscript\" target='_blank'>Authors' Accepted Manuscript</a> is also available open access).</p>
-      <p>We have published, and aim to continue to publish, our findings on the views of conservationists in various ways. Where possible, we will include these on this website.</p>"
-    -
-      link: 'About us'
-      title: 'About us'
-      content: '<p>We have jointly created the website and associated research projects. We are:
-      <ul>
-      <li><a href="http://www.geog.cam.ac.uk/people/sandbrook/" title="Visit the profile of Chris Sandbrook">Chris Sandbrook (University of Cambridge)</a></li>
-      <li><a href="http://www.see.leeds.ac.uk/people/g.holmes" title="Visit the profile of George Holmes">George Holmes (University of Leeds)</a></li>
-      <li><a href="http://www.geos.ed.ac.uk/homes/jfisher2/">Janet Fisher (University of Edinburgh)</a></li>
-      <li>Rogelio Luque-Lora (University of Cambridge)</li>
-      <li><a href="https://www.ed.ac.uk/geosciences/people?indv=4057" title="Visit the profile of Aidan Keane">Aidan Keane (University of Edinburgh)</a></li>
-      </ul>
-      The website is hosted by the <a href="https://www.unep-wcmc.org" title="Visit the UN Environment World Conservation Monitoring Centre website">UN Environment World Conservation Monitoring Centre.</a><p>'
-    -
-      link: 'Ethics and Data'
-      title: 'Research Ethics and Data Storage'
-      content: '<p>This project has been approved by the Research Ethics committee at the University of Leeds.</p>
-      <p>Responses to the survey contribute to the ongoing Future of Conservation Survey research project. All data gathered for this project will be stored securely by the UN Environment World Conservation Monitoring Centre. This dataset will only be used for the purposes of academic research. An anonymised version of the dataset, excluding all personal information which could potentially lead to the identification of individual responses, may be shared with other researchers.</p>
-      <p>Individual responses will not be identifiable either in this website or in subsequent publications. When email addresses are provided, the project team will not share them with other parties, and will only use them to send summarised results and invitations to participate in future versions of the survey.</p>
-      <p>Some respondents may have received a link to the survey from a colleague, teacher or collaborator who is a user of the Group and Organisation Future of Conservation Survey (GO-FOX) tool. In this case, your responses will be available to the GO-FOX user, and they may be able to identify you by your answers. The GO-FOX tool is intended to support education and organisational capacity development, but the project team do not accept responsibility for how the person sending you the survey uses or distributes responses.</p>
-      <p>Should any data from the Future of Conservation Survey, including GO-FOX results, be used in any resultant publications or presentations, either internal to your organisation or externally facing, you should acknowledge the project team by citing Sandbrook, C., Fisher, J., Holmes, G., Luque-Lora, R., Keane, A., Ingle, R., Calcada, S., Carter, M. (2019). <em>The Group and Organisation Future of Conservation Survey.</em> <a href="www.futureconservation.org" title="Visit the Future of Conservation homepage">www.futureconservation.org</a></p>'
-    -
-      link: 'Contact'
-      title: 'Contact us'
-      content: '<p>For more information about The Future of Conservation project please email <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a></p>'
-    -
-      link: 'FAQs'
-      title: 'FAQs'
-      content: 'Several people have been in touch with questions about various aspects of the Future of Conservation project. Rather than write to everyone individually, we have prepared the following answers to some frequently asked questions. If you still have a question that is not answered below, please do get in touch!'
-      accordion:
-        -
-          title: 'Q: What happened to the two-dimension results and figure that I saw last time I took this survey?'
-          content: '<p>A: The original two dimensions for the Future of Conservation Survey were created by the project team based on their expert understanding of recent conservation debates. However, now that over 10,000 people have taken the survey, we have generated new dimensions that are based on patterns in the way respondents have answered the questions. The best solution to this analysis has three dimensions rather than two, which is why the site has changed. We recognise that this change makes the results somewhat more complex to understand and interpret, but feel it is important to present results that are accurate rather than convenient!</p>'
-        -
-          title: 'Q: For some statements my answer would depend on the context - in some situations I would agree, and others I would disagree - but this isn’t covered by the response options I am given to choose from.'
-          content: '<p>A: This is a fair point, but we hope and assume that when faced with such a situation respondents will choose the mid point of the choices (labeled ‘neutral’), or close to the mid point if they think that on average they lean slightly towards agree/disagree on that question. If this happens then the survey is working well, because some other people will have unambiguous views about the same question and will choose ‘strongly agree’ or ‘strongly disagree’. In this way the survey is effective at revealing the difference between people who have mixed or nuanced views versus those who hold strong positions regardless of the context.</p>'
-        -
-          title: 'Q: The survey uses a quantitative approach, but the issues involved are complex and require qualitative data. There should be more opportunities to enter qualitative answers in the survey.'
-          content: '<p>A: We agree that the issues are complex, and we regularly use qualitative data in our own research. Indeed, the statements we used for the Future of Conservation Survey were first developed for a small sample size Q methodology study, which is a mixed quant/qual methodology. That study revealed some distinct ways of thinking about the issues covered by the Future of Conservation Survey, and in this project we wanted to see how prevalent these views might be in the wider conservation community and what factors might explain the views people hold. To do this we opted for a quantitative approach with a large sample size. It is worth noting that had we received the same number of survey responses (now 14000+) with detailed qualitative data we would have had no prospect of analysing all the survey responses.</p>'
-        -
-          title: 'Q: This is an exercise that oversimplifies the debate and is fundamentally reductive.'
-          content: '<p>A: We recognize that this is a relatively reductionist way of examining the issues, but we propose (and much of the feedback we’ve had indicates) that it is still useful to show the range of issues and allow people to explore one characterization of their position compared with those of other conservationists. In this particular research, we have prioritized breadth over depth: we were acutely aware that people would be less responsive to a survey taking more than roughly 15 minutes to complete, hence the choice to work with quantitative data related to pre-prepared statements that people could respond to relatively intuitively using a simple spectrum of agreement. We have now launched a version of the survey which can be taken internally by <a href="/about-go-fox" title="Visit the About Go-FOX page">groups and organisations</a>, with the survey serving as platform for more nuanced and detailed discussion.</p>
-          <p>We recognise that the three axes presented in the figure on the results page do not cover the full breadth of issues at stake in debates about the future of conservation, and indeed many of the questions in the survey do not contribute to respondents’ scores on these axes. This is why we have included an open question at the end of the survey, which asks respondents to contribute other issues which they think are pertinent to the future of conservation, but which were not at the time included in the survey. If there are other issues which you would like to see included in the survey, that is the place to suggest them (if you have already taken the survey, feel free to get in touch with us directly: <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a>).</p>'
-        -
-          title: 'Q: The wording of some of the questions is problematic, making it difficult to know how to answer.'
-          content: '<p>A: The survey went through a lengthy period of testing, but like all social surveys, we accept that not all the statements are perfect and that some people will dislike some of them. It is important to note that as the survey was intended to discover how conservationists responded to the points made in the new conservation debate in the literature. Many of the statements are direct quotes from published articles in that debate.</p>'
-        -
-          title: 'Q: Isn’t this just an academic exercise? What difference can it make?'
-          content: '<p>A: We certainly want this survey to be more than just an academic exercise, and we see it as one stage of a process rather than an end in itself. We are delighted that it has already stimulated so much debate, and think that this is in itself very useful for the conservation community. At the request of several conservation NGOs, we have also developed <a href="/about-go-fox" title="Visit the About Go-FOX page">GO-FOX</a>, a version of the survey which can be run for a defined group, like colleagues within an organisation or a student cohort. We have so far received very positive feedback from the organisations involved, in terms of encouraging internal debate and informing strategic planning. We would be delighted to hear from you at <a href="mailto:futureofconservation@gmail.com" title="Email Future of Conservation">futureofconservation@gmail.com</a> if you would be interested to take part.</p>'
-        -
-          title: 'Q: Can this survey be run for just my group / organisation?'
-          content: '<p>A: Several groups have already approached us asking for a closed survey for only their group, and we have responded to the demand by creating <a href="/about-go-fox" title="Visit the About Go-FOX page" title="About Go-Fox">GO-FOX</a>, a separate version of the survey which can be run internally within a group or organisation.</p>'
-        -
-          title: 'Q: Why these questions? By limiting the questions to the issues already covered in the New Conservation debate, aren’t you reproducing its limitations?'
-          content: '<p>A: This is a fair point. Our research began as an investigation into how members of the wider conservation community felt about the issues raised in the new conservation debate, and that is what we have continued with this survey. These debates are broad enough to cover many key issues in conservation. But we do recognise that there are other important issues that matter for the future of conservation that have not featured in the New Conservation debate, which is why we have now included an open-ended question at the end of the survey which allows respondents to contribute new topics which they feel are pertinent to the future of conservation. We plan to consider these suggestions to produce new statements, to be then incorporated into the survey.</p>'
-        -
-          title: 'Q: The questions are leading questions, and this is poor research design.'
-          content: '<p>A: Please note that the survey is based on statements, rather than questions, and therefore cannot be considered leading. The statements are phrased as Likert items and are sometimes deliberately provocative such that they elicit responses with a spectrum of agreement. This is conventional in social science.</p>'
+      link: 'Ideas for GO-FOX group activities'
+      title: 'Ideas for GO-FOX group activities'
+      content: "<p>
+
+      [Clickable download for materials to be provided by Sara Calcada]
+      <br/>
+      <br/>
+      GO-FOX can be used in a facilitated workshop setting, either before or after the group have taken the online 
+      survey. Click the link above to download a full facilitation guide designed for two specific scenarios – 
+      “team building” and “organisational values and mission”. These activities can also work well in a student 
+      teaching context.
+      </p>"
 
   about_go_fox:
     -
