Make link more consistent in english yml

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -146,7 +146,7 @@ en:
       We hope that you will find these useful, and we welcome your feedback on them (to 
       <a href="mailto:futureofconservation@gmail.com" title="Email The Future of Conservation">futureofconservation@gmail.com</a>).
       If you are looking for information on how to use the website and interpret the results provided, please go to the 
-      <a href="support?locale=en" title="support">support</a> page.<br/><br/>
+      <a href="/support?locale=en" title="support">support</a> page.<br/><br/>
       [Long GO-FOX background video to go here]
       <br/><br/>
       In this video, the core Future of Conservation Survey team introduce the research that lies behind GO-FOX, 
